cambio de texto de pre-saved a ver video

--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -47,7 +47,7 @@
   display: block;
   width: 50px;
   height: 50px;
-  background: url("../assets/icons/spotify-presave.svg");
+  background: url("../assets/icons/youtube-view-video.png");
   background-position: center;
   background-repeat: no-repeat;
 }
