Se agrega la parte de Christy en la banda

--- a/src/styles/band.css
+++ b/src/styles/band.css
@@ -73,6 +73,12 @@
   right: 42%;
 }
 
+.band-button-christy {
+  position: absolute;
+  top: 25%;
+  left: 38%;
+}
+
 .band-button-sami {
   position: absolute;
   top: 30%;
