--- a/src/styles/band.css
+++ b/src/styles/band.css
@@ -1,7 +1,7 @@
 .band-container {
   display: grid;
   place-items: center;
-  grid-template-columns: auto 70vw auto;
+  grid-template-columns: auto 70vw;
   grid-template-rows: 20% 80%;
   height: 100vh;
   position: relative;
@@ -18,7 +18,7 @@
 }
 
 .band-members {
-  grid-column: 2 / 3;
+  grid-column: 1 / 3;
   grid-row: 2 / 3;
   width: 100%;
   height: 100vh;
@@ -37,6 +37,7 @@
   width: 80%;
   height: 80%;
   position: relative;
+  justify-self: center;
 }
 
 .band-button {
@@ -52,7 +53,13 @@
 .band-button-santi {
   position: absolute;
   top: 30%;
-  left: 23%;
+  left: 30%;
+}
+
+.band-button-christy {
+  position: absolute;
+  top: 25%;
+  left: 40%;
 }
 
 .band-button-stevie {
@@ -73,11 +80,6 @@
   right: 42%;
 }
 
-.band-button-christy {
-  position: absolute;
-  top: 25%;
-  left: 38%;
-}
 
 .band-button-sami {
   position: absolute;
@@ -89,25 +91,26 @@
   position: absolute;
   top: 30%;
   width: 19%;
+  display: grid;
 }
 
 .band-member-person-left {
-  left: 0;
+  left: 10%;
 }
 
 .band-member-person-right {
-  top: 35%;
-  right: 20%;
+  top: 40%;
+  right: 18%;
 }
 
 .band-member-person img {
-  width: 100%;
+  width: 70%;
+  justify-self: center;
 }
 
 .band-member-person-text {
   font-size: 1rem;
   font-family: albertsthal;
-  /* opacity: 1; */
   background-color: #eee9e1;
   padding: 0 10px;
 }
@@ -137,4 +140,50 @@
   position: absolute;
   right: -11%;
   overflow: hidden;
+}
+
+.band-container-experience {
+  display: none;
+}
+
+@media (max-width: 1000px) {
+  .band-container {
+    display: block;
+    margin-left: 30px;
+  }
+
+  .band-title img {
+    max-width: 20vh;
+  }
+
+  .band-members {
+    width: 100%;
+    height: 100vh;
+    display: inherit;
+    overflow: hidden;
+    align-items: center;
+    justify-items: start;
+    position: relative;
+  }
+
+}
+
+@media (max-width: 900px) {
+  button {
+    display: none;
+  }
+
+  .band-flower {
+    display: none;
+  }
+
+  .band-spoiler {
+    display: none;
+  }
+
+  .band-container-experience {
+    margin-top: 20px;
+    display: block;
+    font-family: albertsthal;
+  }
 }
