--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -1,5 +1,5 @@
 .banner-section {
-  background-image: url("https://iglesia-web.s3.us-west-2.amazonaws.com/fercho-nxtwave/OPCION-1.gif");
+  background-image: url("https://iglesia-web.s3.us-west-2.amazonaws.com/fercho-nxtwave/05.gif");
   /* background-image: url("../assets/banner/main-banner.png"); */
   background-size: cover;
   background-repeat: no-repeat;
