--- a/src/styles/band.css
+++ b/src/styles/band.css
@@ -149,6 +149,9 @@
 @media (max-width: 1000px) {
   .band-container {
     display: block;
+  }
+
+  .band-title {
     margin-left: 30px;
   }
 
@@ -185,5 +188,21 @@
     margin-top: 20px;
     display: block;
     font-family: albertsthal;
+  }
+}
+
+@media (max-width:800px) {
+  .band-container {
+    height: 80vh;
+  }
+  
+  .band-members {
+    height: 70vh;
+  }
+
+  .band-members-img {
+    width: 100%;
+    height: 100%;
+    /* transform: rotate(4deg); */
   }
 }
