--- a/src/styles/section-info.css
+++ b/src/styles/section-info.css
@@ -161,3 +161,47 @@
   }
 
 }
+
+@media (max-width: 500px) {
+
+  .sectioninfo-margaritas {
+    width: 40vw;
+    height: 40vw;
+    top: -9rem;
+  }
+
+  .sectioninfo-mi-mente, .sectioninfo-mi-mente:hover {
+    top: -18vh;
+    width: 40vw;
+    height: 40vw;
+  }
+
+  .container-sectioninfo {
+    display: block;
+  }
+
+  .sectioninfo-texts {
+    margin-top: 50px;
+    width: 100%;
+    text-align: center;
+  }
+
+  .sectioninfo-texts img {
+    margin: 0 auto;
+    max-width: 70vw;
+  }
+
+  .sectioninfo-polaroid {
+    position: relative;
+    width: 80vw;
+    height: 80vw;
+    transform: rotate(7deg);
+    margin: 0 auto;
+  }
+
+  .sectioninfo-polaroid:hover {
+    position: relative;
+    width: 80vw;
+    height: 80vw;
+  }
+}
