cambio de click a hover y sección en la cara

--- a/src/styles/section-video-container.css
+++ b/src/styles/section-video-container.css
@@ -25,8 +25,8 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  width: 90%;
-  height: 45vw;
+  width: 60rem;
+  height: 30rem;
   margin: 0 auto;
 }
 
@@ -57,6 +57,16 @@
 }
 
 @media (max-width: 900px) {
+
+  .sectionVideo-container {
+    height: 600px;
+  }
+
+  .sectionVideo-video-container {
+    width: 40rem;
+    height: 20rem;
+  }
+
   .sectionVideo-video-background {
     display: none;
   }
