--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -1,5 +1,5 @@
 .banner-section {
-  background-image: url("https://iglesia-web.s3.us-west-2.amazonaws.com/fercho-nxtwave/05.gif");
+  background-image: url("https://iglesia-web.s3.us-west-2.amazonaws.com/fercho-nxtwave/05-ezgif.com-optimize.gif");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom;
