--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -44,11 +44,13 @@
 
 .banner-presave span {
   display: block;
-  width: 50px;
-  height: 50px;
-  background: url("../assets/icons/youtube-view-video.png");
+  width: 42px;
+  height: 42px;
+  background: url("../assets/icons/music.png");
+  background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
+  margin-right: 5px;
 }
 
 .banner-presave {
