--- a/src/styles/section-info.css
+++ b/src/styles/section-info.css
@@ -1,19 +1,58 @@
+@keyframes explode {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.4);
+    opacity: 0;
+  }
+}
+
+@keyframes changeImage {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
 .container-sectioninfo {
   width: 100%;
-  height: 60%;
+  height: 70vh;
   position: relative;
   display: grid;
-  grid-template-columns: 20% 45% 35%;
+  grid-template-columns: 20% 50% 30%;
+  grid-template-rows: 1fr 1fr;
 }
 
 .sectioninfo-texts {
-  align-self: flex-end;
+  display: grid;
+  align-self: center;
+}
+
+.sectioninfo-text-perfecta {
   grid-column: 2 / 3;
-  display: inherit;
+  grid-row: 1 / 2;
+}
+
+.sectioninfo-text-paz {
+  position: relative;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
 }
 
 .sectioninfo-texts img {
   max-width: 40vw;
+}
+
+.sectioninfo-text-paz .img {
+  max-width: 50vw;
 }
 
 .sectioninfo-texts img:nth-child(4) {
@@ -21,53 +60,100 @@
 }
 
 .sectioninfo-polaroid {
-  background: url('../assets/video/Polaroid1.png');
+  background: url('../assets/info/tornamesa.gif');
   background-repeat: no-repeat;
   background-size: contain;
-  width: 31vw;
-  height: 31vw;
+  width: 30vw;
+  height: 75vh;
   position: absolute;
   right: 0;
-  bottom: -10rem;
-}
-
-.sectioninfo-polaroid:hover {
-  background: url('../assets/video/Polaroid2.png');
-  background-repeat: no-repeat;
-  background-size: contain;
-  width: 31vw;
-  height: 31vw;
-  position: absolute;
-  right: 0;
-  bottom: -10rem;
-  transition: all 0.8s;
+  bottom: -10%;
 }
 
 /* Inicio de sección imagenes fuera de los componentes */
 
-.sectioninfo-margaritas {
-  background: url('../assets//margaritas.png');
+.sectioninfo-decorator-text {
+  background: url('../assets/info/raya-text.png');
   background-repeat: no-repeat;
   background-size: contain;
-  width: 15vw;
-  height: 15vw;
+  width: 12vw;
+  height: 12vw;
   position: absolute;
-  top: -8rem;
+  top: -55%;
+  left: 7%;
+  z-index: 5;
 }
 
-.sectioninfo-margaritas2 {
-  background: url('../assets//margaritas2.png');
+.sectioninfo-raya {
+  background: url('../assets/info/raya.png');
   background-repeat: no-repeat;
   background-size: contain;
-  width: 14.5vw;
-  height: 14.5vw;
+  width: 12vw;
+  height: 12vw;
   position: absolute;
-  right: 0;
-  bottom: -11rem;
+  top: -2rem;
+  left: 1rem;
+  z-index: 5;
+  /* transform: rotate(100deg); */
+}
+
+.sectioninfo-estrella {
+  background: url('../assets/info/estrella-top.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 12vw;
+  height: 12vw;
+  position: absolute;
+  bottom: 0;
+  left: 1rem;
+  z-index: 5;
+  transition: all 3s;
+}
+
+.sectioninfo-estrella.exploding {
+  animation: explode 3s forwards
+}
+
+.sectioninfo-estrella.new-image {
+  background: url('../assets/info/fuego.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 12vw;
+  height: 12vw;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  animation: changeImage 1s forwards;
+}
+
+.sectioninfo-granada {
+  background: url('../assets/info/granada-top.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 12vw;
+  height: 12vw;
+  position: absolute;
+  right: 1rem;
+  z-index: 5;
+}
+
+.sectioninfo-granada.exploding {
+  animation: explode 2s forwards
+}
+
+.sectioninfo-granada.new-granada {
+  background: url('../assets/info/revolution.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 12vw;
+  height: 12vw;
+  position: absolute;
+  right: 1rem;
+  z-index: 5;
 }
 
 .sectioninfo-no-quiero {
-  background: url('../assets/video/no-quiero-vivir.png');
+  background: url('');
   background-repeat: no-repeat;
   background-size: contain;
   width: 15vw;
@@ -77,7 +163,7 @@
 }
 
 .sectioninfo-no-quiero:hover {
-  background: url('../assets//video/respiro-aliento-de-Dios.png');
+  background: url('');
   background-repeat: no-repeat;
   background-size: contain;
   width: 12vw;
@@ -88,7 +174,7 @@
 }
 
 .sectioninfo-mi-mente {
-  background: url('../assets//video/mi-mente-esta-en-caos.png');
+  background: url('');
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -100,7 +186,7 @@
 }
 
 .sectioninfo-mi-mente:hover {
-  background: url('../assets//video/todo-esto-pasara.png');
+  background: url('');
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -116,9 +202,17 @@
   transition: all 1s;
 }
 
-@media (max-width: 1280px) {
+@media (max-width: 1300px) {
 
-.sectioninfo-polaroid {
+  .container-sectioninfo {
+    grid-template-columns: 10% 60% 30%;
+  }
+
+  .sectioninfo-texts img {
+    max-width: 50vw;
+  }
+
+  .sectioninfo-polaroid {
     bottom: -2rem;
   }
 
@@ -162,7 +256,51 @@
 
 }
 
+@media (max-width: 900px) {
+  .container-sectioninfo {
+    grid-template-rows: 20vh
+    20vh;
+  }
+
+  .container-sectioninfo {
+    height: 40vh;
+  }
+
+  .sectioninfo-polaroid {
+    height: 40vh;
+    width: 37vw;
+  }
+
+  .sectioninfo-granada {
+    width: 16vw;
+    height: 16vw;
+  }
+
+  .sectioninfo-granada.new-granada {
+    width: 18vw;
+    height: 18vw;
+  }
+
+  .sectioninfo-estrella {
+    width: 14vw;
+    height: 14vw;
+  }
+
+  .sectioninfo-estrella.sectioninfo-estrella.new-image {
+    width: 16vw;
+    height: 16vw;
+  }
+
+  .sectioninfo-text-paz img {
+    max-width: 60vw;
+  }
+}
+
 @media (max-width: 500px) {
+
+  .container-sectioninfo {
+    height: fit-content;
+  }
 
   .sectioninfo-margaritas {
     width: 40vw;
@@ -188,20 +326,22 @@
 
   .sectioninfo-texts img {
     margin: 0 auto;
-    max-width: 70vw;
+    max-width: 100vw;
+  }
+
+  .sectioninfo-granada {
+    top: -4rem;
+  }
+
+  .sectioninfo-estrella {
+    top: -4rem;
   }
 
   .sectioninfo-polaroid {
     position: relative;
-    width: 80vw;
-    height: 80vw;
+    width: 75vw;
+    height: 75vw;
     transform: rotate(7deg);
     margin: 0 auto;
-  }
-
-  .sectioninfo-polaroid:hover {
-    position: relative;
-    width: 80vw;
-    height: 80vw;
   }
 }
