--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,11 +1,43 @@
+@keyframes explode {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.2);
+    opacity: 1;
+  }
+
+  100% {
+    transform: scale(1.4);
+    opacity: 0;
+  }
+}
+
+@keyframes changeImage {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
 .footer-container {
+  display: flex;
+  align-items: end;
+  justify-content: center;
   width: 100%;
   position: relative;
+  height: 10rem;
+  margin: 0 1rem 2rem 1rem;
 }
 
 .footer-social {
   margin: 0 auto;
   text-align: center;
+  padding-top: 5%;
 }
 
 .footer-social img {
@@ -14,28 +46,31 @@
 }
 
 .footer-mancha {
-  background: url('../assets/footer/estoy-solo.png');
+  background: url('../assets/footer/bomba-footer.png');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  width: 11vw;
-  height: 11vw;
+  width: 8vw;
+  height: 8vw;
   position: absolute;
   bottom: 0;
   left: 0;
 }
 
-.footer-mancha:hover {
-  background: url('../assets/footer/tu-presencia-bastara.png');
-  background-size: contain;
+.footer-mancha.exploding {
+  animation: explode 3s forwards
+}
+
+.footer-mancha.new-mancha {
+  background: url('../assets/footer/victoria-abajo.png');
   background-repeat: no-repeat;
-  background-position: center;
-  width: 10vw;
-  height: 10vw;
+  background-size: contain;
+  width: 12vw;
+  height: 12vw;
   position: absolute;
-  bottom: 0;
   left: 0;
-  transition: all 1s;
+  bottom: 0;
+  animation: changeImage 1s forwards;
 }
 
 @media (max-width: 1280px) {
@@ -45,15 +80,6 @@
     position: absolute;
     bottom: 0;
     left: 0;
-  }
-
-  .footer-mancha:hover {
-    width: 14vw;
-    height: 14vw;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    transition: all 1s;
   }
 
   .footer-social img {
