--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -1,9 +1,23 @@
+@keyframes shine {
+  from {
+    background-position: center 0;
+  }
+  to {
+    background-position: center 80%;
+  }
+}
+
 .banner-section {
-  background-image: url("https://iglesia-web.s3.us-west-2.amazonaws.com/fercho-nxtwave/05-ezgif.com-optimize.gif");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: bottom;
   height: 95vh;
+}
+
+.banner-section h1 {
+  color: transparent;
+}
+
+.banner-section img {
+  width: 100%;
+  height: 100vh;
 }
 
 .banner-container {
@@ -29,28 +43,11 @@
 .banner-title:nth-child(2) {
   top: 50vh;
 }
-@keyframes shine {
-  from {
-    background-position: center 0;
-  }
-  to {
-    background-position: center 80%;
-  }
-}
+
+
 .banner-title span {
   font-family: WaterResistant;
   -webkit-text-stroke-width: 0px;
-}
-
-.banner-presave span {
-  display: block;
-  width: 42px;
-  height: 42px;
-  background: url("../assets/icons/music.png");
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-  margin-right: 5px;
 }
 
 .banner-presave {
@@ -59,8 +56,9 @@
   grid-row: 2/3;
   justify-self: center;
   align-self: flex-end;
-  padding: 0 20px;
+  margin: 40px 0;
 }
+
 .banner-presave a {
   text-decoration: none;
   color: white;
@@ -70,7 +68,7 @@
   align-items: center;
 }
 
-@media (max-width: 900px) and (min-width: 699px) {
+@media (max-width: 900px) and (max-width: 900px) {
   .banner-container {
     display: block;
     position: relative;
@@ -88,7 +86,13 @@
     left: 35%;
   }
 }
-@media (max-width: 500px) {
+
+@media (max-width: 900px) {
+
+  .banner-section {
+    height: 100vh;
+  }
+
   .banner-container {
     display: block;
     position: relative;
@@ -105,6 +109,13 @@
     position: absolute;
     bottom: 0;
     width: 100%;
+  }
+
+}
+
+@media (max-width: 319px) and (max-height: 600px) {
+  .banner-section {
+    height: 55vh;
   }
 }
 
