--- a/src/styles/band.css
+++ b/src/styles/band.css
@@ -1,44 +1,80 @@
 .band-container {
   display: grid;
-  place-items: center;
-  grid-template-columns: auto 70vw;
+  grid-template-columns: 15vw 65vw 20vw;
   grid-template-rows: 20% 80%;
+  place-items: center;
+  background-image: url('../assets/band/radar-aviones.png');
   height: 100vh;
   position: relative;
 }
 
-.band-title {
+.band-logo {
   grid-column: 1 / 2;
   grid-row: 1 / 2;
   display: grid;
 }
 
-.band-title img {
+.band-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  width: 50%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position-y: calc(100% - 60%);
+  background-size: contain;
+}
+
+.band-title p {
+  font-size: 2rem;
+  color: white;
+}
+
+.bold {
+  font-weight:600;
+}
+
+.band-logo img {
   max-width: 15vw;
 }
 
 .band-members {
-  grid-column: 1 / 3;
+  position: relative;
+  display: inherit;
+  grid-column: 2 / 3;
   grid-row: 2 / 3;
+  background-repeat: no-repeat;
   width: 100%;
   height: 100vh;
-  display: inherit;
   overflow: hidden;
   align-items: center;
   justify-items: start;
-  position: relative;
+}
+
+.text-unete-revolucion {
+  position: absolute;
+  bottom: 4%;
+  background-image: url('../assets/band/text-unete-a-la-revolucion.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  width: 100%;
+  height: 10%;
+  z-index: 5;
 }
 
 .band-members-img{
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url('../assets/band/band-black-white.png');
+  background: url('../assets/band/banda-red.png');
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
-  width: 110rem;
-  height: 60rem;
+  width: 70rem;
+  height: 70rem;
   position: relative;
   justify-self: center;
 }
@@ -57,40 +93,39 @@
 
 .band-button-santi {
   position: absolute;
-  top: 20%;
-  left: 34%;
+  top: 46%;
+  left: 32%;
 }
 
 .band-button-christy {
   position: absolute;
-  top: 20%;
-  left: 42%;
+  top: 68%;
+  right: 20%;
 }
 
 .band-button-gonzo {
   position: absolute;
-  top: 18%;
-  right: 41%;
+  top: 26%;
+  right: 55%;
 }
 
 .band-button-sami {
   position: absolute;
-  top: 13%;
-  right: 30%;
+  top: 33%;
+  left: 27%;
 }
 
 .band-button-stevie {
   position: absolute;
-  top: 50%;
-  right: 40%;
+  top: 32%;
+  right: 27%;
 }
 
 .band-button-JD {
   position: absolute;
-  top: 62%;
-  right: 51%;
+  top: 43%;
+  right: 48%;
 }
-
 
 
 .band-member-person {
@@ -101,37 +136,38 @@
 }
 
 .band-member-person-left {
-  left: 10%;
+  left: 0;
 }
 
 .band-member-person-right {
   top: 40%;
-  right: 18%;
+  right: -1%;
 }
 
 .band-member-person img {
-  width: 70%;
+  width:90%;
   justify-self: center;
 }
 
 .band-member-person-text {
   font-size: 1rem;
-  font-family: albertsthal;
-  background-color: #eee9e1;
-  padding: 0 10px;
+  font-family: CenturyGothicBlackRegular;
+  background-color: rgba(49, 46, 42, 0.7);
+  padding: 10px;
+  border-radius: 20px 0;
+  color: #FFF;
 }
 
 .band-flower {
-  background: url('../assets//band/background-flower.png');
+  grid-column: 3 / 4;
+  grid-row: 2 / 3;
+  background: url('../assets//band/flor-granada.png');
   background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
-  position: absolute;
-  width: 20vw;
-  height: 48%;
-  transform: rotate(-20deg);
+  background-size: cover;
+  width: 90%;
+  height: 60%;
   right: 5vw;
-  opacity: 0.8;
   z-index: 2;
 }
 
@@ -152,54 +188,54 @@
   display: none;
 }
 
-@media (max-height: 850px) {
-
+@media (max-width: 1300px) {
   .band-members-img {
-    width: 78rem;
-    height: 40rem;
+    width: 50rem;
+    height: 47rem;
   }
-
-  .band-flower {
-    width: 15rem;
-    height: 40rem;
-  }
-
-}
-
-@media (max-height: 1200px ) and ( max-width: 900px) {
-  .band-members-img {
-    width: 60rem;
-    height: 40rem;
-  }
-}
-
-@media (max-width: 1000px) {
-  .band-container {
-    display: block;
-  }
-
-  .band-title {
-    margin-left: 30px;
-  }
-
-  .band-title img {
-    max-width: 20vh;
-  }
-
-  .band-members {
-    width: 100%;
-    height: 100vh;
-    display: inherit;
-    overflow: hidden;
-    align-items: center;
-    justify-items: start;
-    position: relative;
-  }
-
 }
 
 @media (max-width: 900px) {
-  button {
+  .band-container {
+    display: block;
+    text-align: center;
+    width: 100%;
+  }
+
+  .band-logo {
+    display: block;
+    width: 100vw;
+    margin: 0 auto;
+  }
+
+  .band-logo img {
+    max-width: 45vw;
+  }
+
+  .band-container-experience {
+    display: block;
+    max-width: 60%;
+    font-size: 1.5rem;
+    margin: 0 auto;
+  }
+
+  .band-title {
+    display: block;
+    width: 50%;
+    height: 110px;
+    margin: 0 auto;
+  }
+
+  .band-title p {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 10px;
+    font-size: 1.7rem;
+    height: 100%;
+  }
+
+  .band-image-placa {
     display: none;
   }
 
@@ -211,25 +247,53 @@
     display: none;
   }
 
-  .band-container-experience {
-    margin-top: 20px;
-    display: block;
-    font-family: albertsthal;
+  .band-members {
+    height: 80vh;
+  }
+
+  .band-member-person {
+    display: none;
+  }
+
+  .band-members-img {
+    width: 55rem;
+    height: 51rem;
   }
 }
 
-@media (max-width:800px) {
-  .band-container {
-    height: 80vh;
+@media (max-width: 500px) {
+
+  .band-logo img {
+    max-width: 65vw;
   }
-  
+
+  .band-title {
+    width: 80%;
+  }
+
+  .band-title p {
+    font-size: 1.7rem;
+  }
+
   .band-members {
     height: 70vh;
   }
 
   .band-members-img {
     width: 100%;
-    height: 100%;
-    /* transform: rotate(4deg); */
+    height: 30rem;
+  }
+
+  .text-unete-revolucion {
+    bottom: 18%;
+  }
+
+  .band-member-person-right {
+    right: 13%;
+    z-index: 5;
+  }
+
+  .band-member-person-left {
+    z-index: 5;
   }
 }
